--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "mongoose": "^5.7.7",
     "multer": "^1.4.2",
     "node-cron": "^2.0.3",
-    "promise": "^8.0.3"
+    "promise": "^8.0.3",
+    "underscore": "^1.9.1",
+    "uniqid": "^5.1.0"
   }
 }
